forgot passsword done user signUp with payment done

--- a/frontend/src/app/pages/home/homepage/homepage.component.html
+++ b/frontend/src/app/pages/home/homepage/homepage.component.html
@@ -10,7 +10,7 @@
               <p class="hero-subtitle">La CCCT facilite les échanges économiques et culturels entre le Canada et la Tunisie. Rejoignez-nous pour explorer de nouvelles opportunités d'affaires.</p>
               <div class="hero-buttons">
                   <a href="#" class="btn btn-dark">En savoir plus</a>
-                  <a href="#" class="btn btn-outline-dark">Contactez-nous</a>
+                  <a data-bs-toggle="modal" data-bs-target="#contactModal" class="btn btn-outline-dark">Contactez-nous</a>
               </div>
           </div>
           <div class="col-lg-6">
@@ -108,7 +108,123 @@
         <h2 class="faq-title">FAQ</h2>
         <p class="faq-description">Découvrez les réponses aux questions les plus fréquentes concernant nos services et adhésions.</p>
         <div class="mt-4">
-          <a href="#" class="btn-contact">Contact</a>
+          <button class="button" data-bs-toggle="modal" data-bs-target="#contactModal">
+            Get in touch
+            <div class="star-1">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                xml:space="preserve"
+                version="1.1"
+                style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
+                viewBox="0 0 784.11 815.53"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+              >
+                <defs></defs>
+                <g id="Layer_x0020_1">
+                  <metadata id="CorelCorpID_0Corel-Layer"></metadata>
+                  <path
+                    class="fil0"
+                    d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z"
+                  ></path>
+                </g>
+              </svg>
+            </div>
+            <div class="star-2">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                xml:space="preserve"
+                version="1.1"
+                style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
+                viewBox="0 0 784.11 815.53"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+              >
+                <defs></defs>
+                <g id="Layer_x0020_1">
+                  <metadata id="CorelCorpID_0Corel-Layer"></metadata>
+                  <path
+                    class="fil0"
+                    d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z"
+                  ></path>
+                </g>
+              </svg>
+            </div>
+            <div class="star-3">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                xml:space="preserve"
+                version="1.1"
+                style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
+                viewBox="0 0 784.11 815.53"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+              >
+                <defs></defs>
+                <g id="Layer_x0020_1">
+                  <metadata id="CorelCorpID_0Corel-Layer"></metadata>
+                  <path
+                    class="fil0"
+                    d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z"
+                  ></path>
+                </g>
+              </svg>
+            </div>
+            <div class="star-4">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                xml:space="preserve"
+                version="1.1"
+                style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
+                viewBox="0 0 784.11 815.53"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+              >
+                <defs></defs>
+                <g id="Layer_x0020_1">
+                  <metadata id="CorelCorpID_0Corel-Layer"></metadata>
+                  <path
+                    class="fil0"
+                    d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z"
+                  ></path>
+                </g>
+              </svg>
+            </div>
+            <div class="star-5">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                xml:space="preserve"
+                version="1.1"
+                style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
+                viewBox="0 0 784.11 815.53"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+              >
+                <defs></defs>
+                <g id="Layer_x0020_1">
+                  <metadata id="CorelCorpID_0Corel-Layer"></metadata>
+                  <path
+                    class="fil0"
+                    d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z"
+                  ></path>
+                </g>
+              </svg>
+            </div>
+            <div class="star-6">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                xml:space="preserve"
+                version="1.1"
+                style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd"
+                viewBox="0 0 784.11 815.53"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+              >
+                <defs></defs>
+                <g id="Layer_x0020_1">
+                  <metadata id="CorelCorpID_0Corel-Layer"></metadata>
+                  <path
+                    class="fil0"
+                    d="M392.05 0c-20.9,210.08 -184.06,378.41 -392.05,407.78 207.96,29.37 371.12,197.68 392.05,407.74 20.93,-210.06 184.09,-378.37 392.05,-407.74 -207.98,-29.38 -371.16,-197.69 -392.06,-407.78z"
+                  ></path>
+                </g>
+              </svg>
+            </div>
+          </button>
         </div>
       </div>
       
@@ -192,6 +308,7 @@
 <app-testamonial></app-testamonial>
 
 <!-- Contact Section -->
+
 <section class="contact-section">
   <div class="container">
       <div class="row">
@@ -224,6 +341,226 @@
       </div>
   </div>
 </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- Contact Modal -->
+<div class="body2">
+<div class="modal fade" id="contactModal" tabindex="-1" aria-labelledby="contactModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
+      <div class="modal-content">
+          <div class="modal-decorations">
+              <div class="maple-leaf"></div>
+              <div class="crescent"></div>
+          </div>
+          <div class="modal-header">
+              <h5 class="modal-title" id="contactModalLabel">Contactez-nous</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                  <i class="bi bi-x"></i>
+              </button>
+          </div>
+          <div class="modal-body">
+              <form id="contactForm">
+                  <div class="form-section">
+                      <div class="form-section-title">
+                          <i class="bi bi-person-circle"></i> Informations personnelles
+                      </div>
+                      <div class="row g-3">
+                          <div class="col-md-6">
+                              <div class="input-group">
+                                  <span class="input-group-text">
+                                      <i class="bi bi-person"></i>
+                                  </span>
+                                  <input type="text" class="form-control" id="firstName" placeholder="Prénom" required>
+                              </div>
+                          </div>
+                          <div class="col-md-6">
+                              <div class="input-group">
+                                  <span class="input-group-text">
+                                      <i class="bi bi-person-fill"></i>
+                                  </span>
+                                  <input type="text" class="form-control" id="lastName" placeholder="Nom" required>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+
+                  <div class="form-section">
+                      <div class="form-section-title">
+                          <i class="bi bi-building"></i> Informations professionnelles
+                      </div>
+                      <div class="row g-3">
+                          <div class="col-md-6">
+                              <div class="input-group">
+                                  <span class="input-group-text">
+                                      <i class="bi bi-briefcase"></i>
+                                  </span>
+                                  <input type="text" class="form-control" id="company" placeholder="Entreprise">
+                              </div>
+                          </div>
+                          <div class="col-md-6">
+                              <div class="input-group">
+                                  <span class="input-group-text">
+                                      <i class="bi bi-person-badge"></i>
+                                  </span>
+                                  <input type="text" class="form-control" id="jobTitle" placeholder="Fonction">
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+
+                  <div class="form-section">
+                      <div class="form-section-title">
+                          <i class="bi bi-envelope-check"></i> Coordonnées
+                      </div>
+                      <div class="row g-3">
+                          <div class="col-md-6">
+                              <div class="input-group">
+                                  <span class="input-group-text">
+                                      <i class="bi bi-envelope"></i>
+                                  </span>
+                                  <input type="email" class="form-control" id="email" placeholder="Email" required>
+                              </div>
+                          </div>
+                          <div class="col-md-6">
+                              <div class="input-group">
+                                  <span class="input-group-text">
+                                      <i class="bi bi-telephone"></i>
+                                  </span>
+                                  <input type="tel" class="form-control" id="phone" placeholder="Téléphone">
+                              </div>
+                          </div>
+                          <div class="col-md-12">
+                              <div class="input-group">
+                                  <span class="input-group-text">
+                                      <i class="bi bi-geo-alt"></i>
+                                  </span>
+                                  <select class="form-control" id="country" required>
+                                      <option value="" selected disabled>Sélectionnez votre pays</option>
+                                      <option value="CA">Canada</option>
+                                      <option value="TN">Tunisie</option>
+                                      <option value="FR">France</option>
+                                      <option value="US">États-Unis</option>
+                                      <option value="other">Autre</option>
+                                  </select>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+
+                  <div class="form-section">
+                      <div class="form-section-title">
+                          <i class="bi bi-chat-dots"></i> Votre message
+                      </div>
+                      <div class="row g-3">
+                          <div class="col-md-12">
+                              <div class="input-group">
+                                  <span class="input-group-text">
+                                      <i class="bi bi-list-check"></i>
+                                  </span>
+                                  <select class="form-control" id="subject" required>
+                                      <option value="" selected disabled>Sujet de votre message</option>
+                                      <option value="adhesion">Adhésion</option>
+                                      <option value="services">Services</option>
+                                      <option value="evenements">Événements</option>
+                                      <option value="partenariat">Partenariat</option>
+                                      <option value="autre">Autre</option>
+                                  </select>
+                              </div>
+                          </div>
+                          <div class="col-md-12">
+                              <div class="form-floating">
+                                  <textarea class="form-control form-control-textarea" id="message" placeholder="Votre message" style="height: 150px" required></textarea>
+                                  <label for="message">Votre message</label>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+
+                  <div class="form-divider">
+                      <span class="form-divider-text">Préférences</span>
+                  </div>
+
+                  <div class="form-check mb-3">
+                      <input class="form-check-input" type="checkbox" id="newsletter" checked>
+                      <label class="form-check-label" for="newsletter">
+                          Je souhaite recevoir la newsletter de la CCCT
+                      </label>
+                  </div>
+
+                  <div class="form-check mb-3">
+                      <input class="form-check-input" type="checkbox" id="privacy" required>
+                      <label class="form-check-label" for="privacy">
+                          J'accepte la <a href="#" class="text-decoration-none">politique de confidentialité</a> de la CCCT
+                      </label>
+                  </div>
+              </form>
+
+              <!-- Success message (hidden by default) -->
+              <div class="success-message" id="successMessage">
+                  <i class="bi bi-check-circle-fill success-icon"></i>
+                  <h3 class="success-title">Message envoyé avec succès!</h3>
+                  <p class="success-text">Merci de nous avoir contacté. Notre équipe vous répondra dans les plus brefs délais.</p>
+                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Fermer</button>
+              </div>
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-light" data-bs-dismiss="modal">Annuler</button>
+              <button type="submit" class="btn btn-submit" form="contactForm">
+                  <span class="loading-spinner" id="loadingSpinner"></span>
+                  Envoyer
+              </button>
+          </div>
+      </div>
+  </div>
+</div>
+</div>
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+      const contactForm = document.getElementById('contactForm');
+      const successMessage = document.getElementById('successMessage');
+      const loadingSpinner = document.getElementById('loadingSpinner');
+      
+      contactForm.addEventListener('submit', function(e) {
+          e.preventDefault();
+          
+          // Show loading spinner
+          loadingSpinner.style.display = 'inline-block';
+          
+          // Simulate form submission (replace with actual form submission)
+          setTimeout(function() {
+              // Hide loading spinner
+              loadingSpinner.style.display = 'none';
+              
+              // Hide form and show success message
+              contactForm.style.display = 'none';
+              successMessage.style.display = 'block';
+          }, 1500);
+      });
+      
+      // Reset modal when it's hidden
+      const contactModal = document.getElementById('contactModal');
+      contactModal.addEventListener('hidden.bs.modal', function() {
+          contactForm.reset();
+          contactForm.style.display = 'block';
+          successMessage.style.display = 'none';
+          loadingSpinner.style.display = 'none';
+      });
+  });
+</script>
 
 <!-- Footer -->
 <app-homefooter></app-homefooter>
