--- a/frontend/src/app/pages/login/reset-password/reset-password.component.html
+++ b/frontend/src/app/pages/login/reset-password/reset-password.component.html
@@ -42,29 +42,43 @@
                 </div>
         
                 <div class="mt-4">
-                  <form >
+                  <form  [formGroup]="resetPassword" (ngSubmit)="send()">
+                    <div class="mb-3">
+                      <label for="newPassword" class="form-label">Your email</label>
+                      <input type="text" id="newPassword" formControlName="email" class="form-control" placeholder="Enter new password">
+                      @if (resetPassword.get('email')?.touched && resetPassword.get('email')?.invalid) {
+                        <div class="text-danger">
+                          email is required .
+                        </div>
+                      }
+                    </div>
                   
                     <div class="mb-3">
                       <label for="newPassword" class="form-label">New Password</label>
-                      <input
-                        type="password"
-                        class="form-control"
-                        id="newPassword"
-                        name="newPassword"
-                        placeholder="New Password"
-                        required
-                      >
+                      <input type="password" id="newPassword" formControlName="newPassword" class="form-control" placeholder="Enter new password">
+                      @if (resetPassword.get('newPassword')?.touched && resetPassword.get('newPassword')?.invalid) {
+                        <div class="text-danger">
+                          New password is required (min. 6 characters).
+                        </div>
+                      }
                     </div>
+                    
                     <div class="mb-3">
                       <label for="confirmPassword" class="form-label">Confirm Password</label>
                       <input
                         type="password"
                         class="form-control"
+                        formControlName="confirmPassword"
                         id="confirmPassword"
                         name="confirmPassword"
                         placeholder="Confirm Password"
                         required
                         >
+                        @if (resetPassword.errors?.['mismatch'] && resetPassword.get('confirmPassword')?.touched) {
+                          <div class="text-danger">
+                            Passwords do not match.
+                          </div>
+                        }
                     </div>
                     <div class="text-end">
                       <button type="submit" class="btn btn-primary w-md waves-effect waves-light" >
