--- a/frontend/src/app/pages/member/gestion-profile/change-password/change-password.component.html
+++ b/frontend/src/app/pages/member/gestion-profile/change-password/change-password.component.html
@@ -1,28 +1,38 @@
-<!-- profile-change-password.component.html -->
-
-  <form >
-    <div class="row mb-3">
-      <label for="currentPassword" class="col-md-4 col-lg-3 col-form-label">Current Password</label>
-      <div class="col-md-8 col-lg-9">
-        <input name="currentPassword" type="password" class="form-control" id="currentPassword" >
+<form [formGroup]="passwordForm" (ngSubmit)="changePassword()">
+  <div class="mb-3">
+    <label for="currentPassword" class="form-label">Current Password</label>
+    <input type="password" id="currentPassword" formControlName="currentPassword" class="form-control" placeholder="Enter current password">
+    @if (passwordForm.get('currentPassword')?.touched && passwordForm.get('currentPassword')?.invalid) {
+      <div class="text-danger">
+        Current password is required.
       </div>
-    </div>
-
-    <div class="row mb-3">
-      <label for="newPassword" class="col-md-4 col-lg-3 col-form-label">New Password</label>
-      <div class="col-md-8 col-lg-9">
-        <input name="newPassword" type="password" class="form-control" id="newPassword" >
+    }
+    @if (currentPasswordIncorrect) {
+      <div class="text-danger mt-1">
+        Current password is incorrect. Please try again.
       </div>
-    </div>
+    }
+  </div>
 
-    <div class="row mb-3">
-      <label for="confirmPassword" class="col-md-4 col-lg-3 col-form-label">Confirm Password</label>
-      <div class="col-md-8 col-lg-9">
-        <input name="confirmPassword" type="password" class="form-control" id="confirmPassword" >
+  <div class="mb-3">
+    <label for="newPassword" class="form-label">New Password</label>
+    <input type="password" id="newPassword" formControlName="newPassword" class="form-control" placeholder="Enter new password">
+    @if (passwordForm.get('newPassword')?.touched && passwordForm.get('newPassword')?.invalid) {
+      <div class="text-danger">
+        New password is required (min. 6 characters).
       </div>
-    </div>
+    }
+  </div>
 
-    <div class="text-center">
-      <button type="submit" class="btn btn-primary">Change Password</button>
-    </div>
-  </form>
+  <div class="mb-3">
+    <label for="confirmPassword" class="form-label">Confirm New Password</label>
+    <input type="password" id="confirmPassword" formControlName="confirmPassword" class="form-control" placeholder="Confirm new password">
+    @if (passwordForm.errors?.['mismatch'] && passwordForm.get('confirmPassword')?.touched) {
+      <div class="text-danger">
+        Passwords do not match.
+      </div>
+    }
+  </div>
+
+  <button type="submit" class="btn btn-primary" [disabled]="passwordForm.invalid">Change Password</button>
+</form>
