--- a/frontend/src/app/pages/member/gestion-profile/overview/overview.component.html
+++ b/frontend/src/app/pages/member/gestion-profile/overview/overview.component.html
@@ -1,18 +1,14 @@
 <div class="tab-pane fade show active profile-overview" id="profile-overview">
   <h5 class="card-title">About</h5>
-  <p class="small fst-italic">{{data.user.about}}</p>
+  <p class="small fst-italic">{{data.user.aboutMe}}</p>
 
   <h5 class="card-title">Profile Details</h5>
 
   <div class="row">
     <div class="col-lg-3 col-md-4 label">Full Name</div>
-    <div class="col-lg-9 col-md-8">{{data.user.firstname}} {{data.user.lastname}}</div>
+    <div class="col-lg-9 col-md-8">{{data.user.firstName}} {{data.user.lastName}}</div>
   </div>
 
-  <div class="row">
-    <div class="col-lg-3 col-md-4 label">Company</div>
-    <div class="col-lg-9 col-md-8"></div>
-  </div>
 
   <div class="row">
     <div class="col-lg-3 col-md-4 label">Job</div>
