--- a/frontend/src/app/shared/layout/member/navbar/navbar.component.html
+++ b/frontend/src/app/shared/layout/member/navbar/navbar.component.html
@@ -165,14 +165,14 @@
         <li class="nav-item dropdown pe-3">
   
           <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
-            <img [src]="'http://127.0.0.1:3000/files/' + data.profileImage" alt="Profile" class="rounded-circle">
-            <span class="d-none d-md-block dropdown-toggle ps-2">{{data.username}}</span>
+            <img [src]="'http://127.0.0.1:3000/files/' + data.user.profileImage" alt="Profile" class="rounded-circle">
+            <span class="d-none d-md-block dropdown-toggle ps-2">{{data.user.username}}</span>
           </a><!-- End Profile Iamge Icon -->
   
           <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
             <li class="dropdown-header">
-              <h6>{{data.username}}</h6>
-              <span>{{data.job}}</span>
+              <h6>{{data.user.username}}</h6>
+              <span>{{data.user.job}}</span>
             </li>
             <li>
               <hr class="dropdown-divider">
