--- a/frontend/src/app/pages/login/forget-password/forget-password.component.html
+++ b/frontend/src/app/pages/login/forget-password/forget-password.component.html
@@ -45,11 +45,11 @@
                                   <div class="alert alert-success text-center mb-4" role="alert">
                                       Enter your Email and instructions will be sent to you!
                                   </div>
-                                  <form action="https://themesbrand.com/skote-symfony/layouts/index.html">
+                                  <form  [formGroup]="forgotPassword" (ngSubmit)="send()">
       
                                       <div class="mb-3">
                                           <label for="useremail" class="form-label">Email</label>
-                                          <input type="email" class="form-control" id="useremail" placeholder="Enter email">
+                                          <input type="email"  formControlName="email" class="form-control" id="useremail" placeholder="Enter email">
                                       </div>
                   
                                       <div class="text-end">
