--- a/frontend/src/app/pages/member/gestion-profile/edit-profile/edit-profile.component.html
+++ b/frontend/src/app/pages/member/gestion-profile/edit-profile/edit-profile.component.html
@@ -4,11 +4,24 @@
   <div class="row mb-3">
     <label for="profileImage" class="col-md-4 col-lg-3 col-form-label">Profile Image</label>
     <div class="col-md-8 col-lg-9">
-      <img [src]="'http://127.0.0.1:3000/files/'+ data.user.profileImage"  height=100px alt="Profile">
+      <img [src]="imagePreview ? imagePreview : 'http://127.0.0.1:3000/files/' + data.user.profileImage" height=100px alt="Profile">
+      
       <div class="pt-2">
-        <a href="#" class="btn btn-primary btn-sm" title="Upload new profile image"><i class="bi bi-upload"></i></a>
-        <a href="#" class="btn btn-danger btn-sm" title="Remove my profile image"><i class="bi bi-trash"></i></a>
-      </div>
+        <!-- Hidden file input for image upload -->
+        <input type="file" 
+               id="fileInput" 
+               style="display: none;" 
+               (change)="onFileSelected($event)" 
+               accept="image/*">
+        
+        <!-- Upload button triggers hidden file input -->
+        <a href="javascript:void(0)" 
+        class="btn btn-primary btn-sm" 
+        title="Upload new profile image"
+        (click)="triggerFileInput()">
+       <i class="bi bi-upload"></i>
+     </a>
+        </div>
     </div>
   </div>
 
@@ -88,7 +101,7 @@
   <div class="row mb-3">
     <label for="Instagram" class="col-md-4 col-lg-3 col-form-label">Instagram Profile</label>
     <div class="col-md-8 col-lg-9">
-      <input name="instagram" type="text" formControlName="instgramLink" class="form-control" id="Instagram" >
+      <input name="instagram" type="text" formControlName="instagramLink" class="form-control" id="Instagram" >
     </div>
   </div>
 
