--- a/frontend/src/app/pages/member/gestion-profile/gestion-profile.component.html
+++ b/frontend/src/app/pages/member/gestion-profile/gestion-profile.component.html
@@ -19,10 +19,10 @@
           <h2></h2>
           <h3></h3>
           <div class="social-links mt-2">
-            <a href="#" class="twitter"><i class="bi bi-twitter"></i> </a>
-            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+          
+            <a [href]="data.user.facebookLink" class="facebook"><i class="bi bi-facebook"></i></a>
+            <a [href]="data.user.instgramLink" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a [href]="data.user.linkedinLink" class="linkedin"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
       </div>
