--- a/frontend/src/app/shared/layout/admin/sidebar/sidebar.component.html
+++ b/frontend/src/app/shared/layout/admin/sidebar/sidebar.component.html
@@ -15,7 +15,7 @@
                           <span>Profile</span>
                       </a>
                       <div class="dropdown-divider"></div>
-                      <a class="dropdown-item text-danger" href="/auth/logout">
+                      <a class="dropdown-item text-danger" (click)="logout()">
                           <i class="bx bx-power-off font-size-16 align-middle me-1 text-danger"></i> 
                           <span>Logout</span>
                       </a>
